Fixed the vertical align on chromium base browsers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,12 +3,6 @@
     height: 300px;
 }
 
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
 main {
-    flex: 1 0 auto;
+    height: 100vh;
 }
